--- a/TutorDot_iOS_1/TutorDot_iOS/Resource/Nibs/TutorCollectionViewCell.xib
+++ b/TutorDot_iOS_1/TutorDot_iOS/Resource/Nibs/TutorCollectionViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -84,6 +85,7 @@
                     </view>
                 </subviews>
             </view>
+            <color key="backgroundColor" name="journalColor"/>
             <constraints>
                 <constraint firstItem="6xF-2a-dsA" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="18" id="RIA-RN-vNo"/>
                 <constraint firstAttribute="bottom" secondItem="6xF-2a-dsA" secondAttribute="bottom" constant="18" id="UVS-aw-bIc"/>
@@ -111,5 +113,8 @@
     <resources>
         <image name="calenderImgYellow" width="15" height="15"/>
         <image name="calenderSeletionImgLocation" width="13.5" height="14"/>
+        <namedColor name="journalColor">
+            <color red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
